# My-Cpp-Demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CPPLog/: CPPLog.h  Log.md  test.cpp
Communication/: CMakeLists.txt  Client.h  Communication.md  Server.h  Socket.h  client.cpp  server.cpp
Communication/include/: Server.h  Socket.h
Communication/src/: Server.cpp  Socket.cpp
Communication/test/: client.cpp  server.cpp
CppLog/: CMakeLists.txt
CppLog/Log/: log.txt
CppLog/include/: CppLog.h
CppLog/src/: CppLog.cpp
CppLog/test/: test.cpp
Server/: Server.h
ThreadPool/: CMakeLists.txt  ThreadPool.h  ThreadPool.md  test  test.cpp
ThreadPool/include/: SafeQueue.h  ThreadPool.h
ThreadPool/src/: SafeQueue.cpp  ThreadPool.cpp
ThreadPool/test/: test.cpp
demo/: client.cpp  demo.md  server.cpp
doc/: ThreadPool.md
